
.. note::

   As of version 0.13.0, Flask-Restless supports Python 2.6, 2.7, and 3. Before
   that, it supported Python 2.5, 2.6, and 2.7.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.13.0-dev
------------------

Not yet released.

- #17: use Flask's :attr:`flask.Request.json` to parse incoming JSON requests.
- #29: replace custom ``jsonify_status_code`` function with built-in support
  for ``return jsonify(), status_code`` style return statements (new in Flask
  0.9).
- #256: makes search parameters available to postprocessors for
  :http:method:`get` and :http:method:`patch` requests that access multiple
  resources.
- #263: Adds Python 3.3 support; drops Python 2.5 support.

Version 0.12.1
--------------

Released on December 1, 2013.

- #222: on :http:method:`post` and :http:method:`patch` requests, recurse into
  nested relations to get or create instances of related models.
- #246: adds `pysqlite <https://pypi.python.org/pypi/pysqlite>`_ to test
  requirements.
- #260: return a single object when making a :http:method:`get` request to a
  relation sub-URL.
- #264: all methods now execute postprocessors after setting headers.
- #265: convert strings to dates in related models when making
  :http:method:`post` requests.

Version 0.12.0
--------------

Released on August 8, 2013.

- #188: provides metadata as well as normal data in JSONP responses.
- #193: allows :http:method:`delete` requests to related instances.
- #215: removes Python 2.5 tests from Travis configuration.
- #216: don't resolve Query objects until pagination function.
- #217: adds missing indices in format string.
- #220: fix bug when checking attributes on a hybrid property.
- #227: allows client to request that the server use the current date and/or
  time when setting the value of a field.
- #228 (as well as #212, #218, #231): fixes issue due to a module removed from